tests/fixtures/positive/naming/NoAbbreviations_OverrideFooBarPositive.cls
public class ExampleFooBarAbbrPositive {
	public void method() {
		Integer baz = 2; // Not in foo,bar
	}
}
