tests/fixtures/negative/naming/NoAbbreviations_OverrideFooBarSuffix.cls
public class ExampleFooBarSuffixList {
	public void method() {
		Integer foo = 0;
		Integer bar = 1;
		Integer baz = 2;
	}
}
